--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         
         /* Utility Classes */
         .hidden { display: none !important; }
-        .input-group { display: flex; gap: 10px; margin-bottom: 20px; background: #282828; padding: 15px;QNdkzM border-radius: 8px; }
+        .input-group { display: flex; gap: 10px; margin-bottom: 20px; background: #282828; padding: 15px; border-radius: 8px; }
         input { flex-grow: 1; padding: 10px; border-radius: 20px; border: none; background: #121212; color: white; }
         
         /* Results Grid */
